--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
     </script>-->
 </head>
 <body>
-    <h1 id="firstH1" class="first-h1 heading">Hello World!!</h1>
+    <h1>Hello World !!!</h1>
+    <p id="firstPara"></p>
 
-    <h1>Second H1</h1>
-
-    <button onclick="buttonClick('Vikrant Clicked Me !!!')">Click Me</button>
-
-
-    
-    <script src="script.js"></script>
+    <script src="./string-test.js"></script>
+    <script src="./number-test.js"></script>
+    <script src="./date-test.js"></script>
+    <script src="./array-test.js"></script>
 </body>
 </html>
