--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     <script src="./number-test.js"></script>
     <script src="./date-test.js"></script>
     <script src="./array-test.js"></script>
+    <script type="module" src="./module-test.js"></script>
+    <script type="module" src="./import-test.js"></script>
 </body>
 </html>
