--- a/index.html
+++ b/index.html
@@ -10,9 +10,33 @@
         }
     </script>-->
 </head>
-<body>
+<body >
     <h1>Hello World !!!</h1>
     <p id="firstPara"></p>
+
+    <input type="text" id="username" title="Username" name="username"
+    onkeydown="keydownEventHandler(event)" />
+    <button onclick="clickEventHandler(event)" onmouseout="mouseOutHandler()">Click Me</button>
+
+
+    <a href="https://google.com">Google</a>
+
+    <form name="registrationForm" id="registrationForm" novalidate onsubmit="submitEventHandler(event)">
+        <div>
+            <label for="firstName">First Name</label>
+            <input type="text" name="firstName" id="firstName" required  minlength="5">
+            <p id="firstNameError" style="display:none">Firstname should be greater than 5 characters</p>
+        </div>
+        <div>
+            <label for="lastName">Last Name</label>
+            <input type="text" name="lastName" id="lastName" required>
+        </div>
+        <div>
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" />
+        </div>
+        <button type="submit"> Save Details </button>
+    </form>
 
     <script src="./string-test.js"></script>
     <script src="./number-test.js"></script>
@@ -20,5 +44,7 @@
     <script src="./array-test.js"></script>
     <script type="module" src="./module-test.js"></script>
     <script type="module" src="./import-test.js"></script>
+    <script src="./events-test.js"></script>
+    <script src="form-test.js"></script>
 </body>
 </html>
